# gst-cencdec

./: README.md  configure.ac  meson.build  meson_options.txt
gst-libs/gst/cencdrm/: Makefile.am  gstcencdrm.c  gstcencdrm.h  meson.build
gst-libs/gst/drm/: gstaesctr.c  gstcencdrm.c  gstcencdrm.h
gst/cencdec/: Makefile.am  gstcencdec.c  gstdrm_stub.c  gstplugin.c  meson.build
pkgconfig/: gstreamer-cencdrm-uninstalled.pc.in  gstreamer-cencdrm.pc.in  meson.build
src/: Makefile.am  gstcencdec.c  gstcencelements.c  gstdrm_stub.c  gstdrm_stub.h
tests/check/: meson.build
tests/check/aesctr/: decrypt.c
