option('tests', type : 'feature', value : 'auto', yield : true,
       description : 'Build and enable unit tests')

option('package-name', type : 'string', yield : true,
       description : 'package name to use in plugins')
option('package-origin', type : 'string',
       value : 'Unknown package origin', yield : true,
       description : 'package origin URL to use in plugins')
